fix Soma 001 positioning on mobile

--- a/css/001.css
+++ b/css/001.css
@@ -5,14 +5,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     overflow: hidden;
 }
 
 .container {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     max-width: 100vh;
     max-height: 100vw;
 }
@@ -24,6 +23,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: contain;
+    border-radius: 50%;
 }
 
 .clockwise {
